fixed old visible styles for entry and asset pop

--- a/packages/style/pop/_ec-pop_overlay.scss
+++ b/packages/style/pop/_ec-pop_overlay.scss
@@ -11,7 +11,7 @@ ec-pop, ec-entry-pop, ec-asset-list-pop {
       opacity: 0;
       @extend %pop-fade-in;
 
-      &.visible {
+      &.is-visible {
         display: inherit;
         opacity: 1;
       }
